--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,18 +7,15 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.0
-
-  get: ^4.6.1
-
-  dio: ^4.0.4
-
+  flutter_glow : ^0.2.0
+  http: ^0.13.5
   intl: ^0.17.0
 
   syncfusion_flutter_charts: ^19.4.47
