--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
-    - assets/anims/
+    - assets/
 
-  fonts:
-    - family: flutterfonts
-      fonts:
-        - asset: assets/fonts/flutterfonts.ttf
+
+
+
